# sumo

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Manifest.in  README.md  README.rst  changelog.html  customising-plots.html  gallery.html  genindex.html  index.html  modules.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  readthedocs.yml  requirements.txt  requirements_rtd.txt  search.html  searchindex.js  setup.py  sumo-bandplot.html  sumo-bandstats.html  sumo-dosplot.html  sumo-kgen.html  sumo-optplot.html  sumo-phonon-bandplot.html  sumo.cli.html  sumo.electronic_structure.html  sumo.html  sumo.phonon.html  sumo.plotting.html  sumo.symmetry.html  tasks.py  (+1 more)
.doctrees/: changelog.doctree  customising-plots.doctree  gallery.doctree  index.doctree  modules.doctree  sumo-bandplot.doctree  sumo-bandstats.doctree  sumo-dosplot.doctree  sumo-kgen.doctree  sumo-optplot.doctree  sumo-phonon-bandplot.doctree  sumo.cli.doctree  sumo.doctree  sumo.electronic_structure.doctree  sumo.phonon.doctree  sumo.plotting.doctree  sumo.symmetry.doctree  tutorials.doctree
.doctrees/__intersphinx_cache__/: python_objects.inv
.github/workflows/: docs.yml  release.yml  tests.yml
_modules/: index.html
_modules/sumo/: plotting.html
_sources/: customising-plots.rst.txt  gallery.rst.txt  index.rst.txt  modules.rst.txt  sumo-bandplot.rst.txt  sumo-bandstats.rst.txt  sumo-dosplot.rst.txt  sumo-optplot.rst.txt  sumo.electronic_structure.rst.txt  sumo.plotting.rst.txt  sumo.rst.txt
_static/: documentation_options.js
conf/: orbital_colours.conf
docs/: Makefile  make.bat
docs/admin/: version-releases.md
docs/source/: conf.py  gallery.rst  index.rst  modules.rst  sumo-bandplot.rst  sumo-bandstats.rst  sumo-dosplot.rst  sumo-kgen.rst  (+14 more)
examples/: orbital_colours.conf
sumo/: __init__.py
test/: test_bandstructure.py
tests/: README  test_seekpath.py
vaspy/: __init__.py
(+174 files in other folders)
